@startuml Anime Database Logical Model (Comprehensive)
skinparam linetype ortho
skinparam defaultFontSize 9

entity "anime" as anime {
    * id : INTEGER <<PK>> (mal_id)
    --
    **Base info**
    url : TEXT
    title : TEXT
    type : INTEGER «FK»
    source : TEXT
    --
    **Episodes & Status**
    episodes : INTEGER
    status : INTEGER «FK»
    airing : BOOLEAN
    duration : TEXT
    quality_score : BOOLEAN 
    --
    **Dates**
    start_date : DATETIME
    end_date : DATETIME
    season : TEXT
    year : INTEGER
    --
    **Broadcast**
    broadcast_day : TEXT
    broadcast_time : TEXT
    broadcast_timezone : TEXT
    --
    **Images**
    image_url : TEXT
    small_image_url : TEXT
    large_image_url : TEXT
    --
    **Trailer**
    trailer_embed_url : TEXT
    --
    **Text Content**
    synopsis : TEXT
    background : TEXT
}

entity "synonyms" as titles {
    * id : INTEGER <<PK>>
    --
    * anime_id : INTEGER <<FK>>
    type : TEXT
    title : TEXT
}

entity "producers" as producers {
    * id : INTEGER <<PK>> (mal_id)
    --
    name : TEXT <<UNIQUE>>
    url : TEXT
}

entity "anime_producers" as anime_producers {
    * anime_id : INTEGER <<FK>>
    * producer_id : INTEGER <<FK>>
}

entity "licensors" as licensors {
    * id : INTEGER <<PK>> (mal_id)
    --
    name : TEXT <<UNIQUE>>
    url : TEXT
}

entity "anime_licensors" as anime_licensors {
    * anime_id : INTEGER <<FK>>
    * licensor_id : INTEGER <<FK>>
}

entity "studios" as studios {
    * id : INTEGER <<PK>> (mal_id)
    --
    name : TEXT <<UNIQUE>>
    url : TEXT
}

entity "anime_studios" as anime_studios {
    * anime_id : INTEGER <<FK>>
    * studio_id : INTEGER <<FK>>
}

entity "tags" as tags {
    * id : INTEGER <<PK>> (mal_id)
    --
    name : TEXT <<UNIQUE>>
    url : TEXT
}

entity "anime_tags" as anime_tags {
    * anime_id : INTEGER <<FK>>
    * tag_id : INTEGER <<FK>>
}

entity "anime_description" as description {
    * id : INTEGER <<PK>>
    --
    * anime_id : INTEGER <<FK>>
    type : TEXT
    title : TEXT
}

enum "language" as lang {
    + PORTUGUESE
    + ENGLISH
}

enum "anime_type" as type {
    + TV
    + OVA
    + Movie
    + Special
    + ONA
    + Music
    + Unknown
}

enum "anime_status" as status {
    + Finished Airing
    + Currently Airing
    + Not yet aired
    + Unknown
}

anime "1"--"*" description : "described by"
description "1"--"1" lang : "is written in"

anime "1"--"*" titles : "has variants"
anime "1"--"1" type : "has"
anime "1"--"1" status : "has"

anime "1"--"*" anime_producers : "produced by"
producers "1"--"*" anime_producers : "produces"

anime "1"--"*" anime_licensors : "licensed by"
licensors "1"--"*" anime_licensors : "licenses"

anime "1"--"*" anime_studios : "created by"
studios "1"--"*" anime_studios : "creates"

anime "1"--"*" anime_tags : "classified as"
tags "1"--"*" anime_tags : "categorizes"

@enduml
